Add java 11 code support
Issue-ID: AAI-3009
Change-Id: Ic65c49e6071f240ec9fe583fa939cc965f928fc9
Signed-off-by: Yoo, Brian (by703c) <by703c@att.com>
Signed-off-by: Harish Venkata Kajur <vk250x@att.com>